--- a/source/_includes/custom/asides/about.html
+++ b/source/_includes/custom/asides/about.html
@@ -1,3 +1,5 @@
 <section>
-A little something about me.
+  <h1>About Me</h1>
+  <p>OSS activist, ASF Member, former Tomcat contributor, founder of JPackage, DevOps Incubator and OBuildFactory projects. Dev, QA and Ops.</p>
+  <p>Living in Challes-les-Eaux, French Alps.</p>
 </section>
