--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,10 +1,5 @@
 <hgroup>
-  <div id="logo">
-  	<div id="logoLeft">{</div>
-  	<div id="logoText">mob</div>
-  	<div id="logoRight">}</div>
-  	<div class="clear"></div>
-  </div>
+  {% img left /images/cd-angry-tux.png 80 80 %}
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
