use smaller image

--- a/source/_includes/custom/header.html
+++ b/source/_includes/custom/header.html
@@ -1,5 +1,5 @@
 <hgroup>
-  {% img left /images/cd-angry-tux.png 80 80 %}
+  {% img left /images/cd-angry-tux-50pct.png 80 80 %}
   <h1><a href="{{ root_url }}/">{{ site.title }}</a></h1>
   {% if site.subtitle %}
     <h2>{{ site.subtitle }}</h2>
